Fix styling for rsvp page on mobile

--- a/src/main/resources/public/styles/rsvps.css
+++ b/src/main/resources/public/styles/rsvps.css
@@ -1,16 +1,6 @@
-body {
-    margin-top: 120px;
-}
-
 .rsvp_form_container {
     max-width: 480px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border-style: solid;
-    border-color: white;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
+    padding-top: 20px;
     margin: 0px auto;
     text-align: center;
 }
